--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/yourdbname
+spring.datasource.url=jdbc:mysql://localhost:3306/jewlys
 spring.datasource.username=root
-spring.datasource.password=Jewlysgv19
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto = create
+
+server.error.include-message=always
+server.error.include-binding-errors=always
